# pydentity-core

./: pyproject.toml
pydentity/: __init__.py  dataprotector.py  exc.py  identity_constants.py  identity_error.py  identity_error_describer.py  identity_options.py  identity_result.py  loggers.py  lookup_normalizer.py  rfc6238service.py  role_manager.py  signin_manager.py  signin_result.py  types.py  user_claims_principal_factory.py  user_confirmation.py  user_login_info.py  user_manager.py
pydentity/_meta/: __init__.py
pydentity/authentication/: __init__.py  _base.py  base.py  builder.py  options.py  provider.py  result.py  scheme.py  scheme_builder.py
pydentity/authentication/bearer/: __init__.py  handlers.py  param.py
pydentity/authentication/cookie/: __init__.py  handlers.py  param.py
pydentity/authentication/interfaces/: __init__.py
pydentity/authorization/: __init__.py  _base.py  base.py  builder.py  context.py  options.py  param.py  policy.py  policy_builder.py  provider.py
pydentity/authorization/interfaces/: __init__.py
pydentity/contrib/sqlalchemy/: __init__.py  fields.py  models.py
pydentity/contrib/sqlalchemy/base/: abstract.py
pydentity/contrib/tortoise/: __init__.py  fields.py  models.py
pydentity/contrib/tortoise/base/: abstract.py
pydentity/contrib/tortoise/stores/: role_store.py  user_store.py
pydentity/ext/sqlalchemy/: __init__.py  models.py
pydentity/ext/sqlalchemy/base/: abstract.py
pydentity/ext/sqlalchemy/stores/: role_store.py  user_store.py
pydentity/ext/tortoise/: __init__.py
pydentity/ext/tortoise/base/: abstract.py  model.py
pydentity/hashers/: README.md  _hashers.py  password_hashers.py
pydentity/http/: context.py
pydentity/interfaces/: __init__.py  dataprotector.py  logger.py  lookup_normalizer.py  password_hasher.py  password_validator.py  protector.py  role_validator.py  token_provider.py  user_claims_principal_factory.py  user_confirmation.py  user_validator.py
pydentity/interfaces/stores/: __init__.py  role_store.py  user_store.py
pydentity/resources/: __init__.py  _error_messages.py
pydentity/security/claims/: __init__.py  claim_types.py  claims.py  serializer.py
pydentity/token_providers/: README.md  __init__.py  authenticator.py  dataprotector.py  totp.py
pydentity/types/: __init__.py
pydentity/utils/: __init__.py
pydentity/validators/: README.md  __init__.py  password_validator.py  role_validator.py  user_validator.py
tests/: conftest.py  test_claims.py  test_dataprotector.py  test_lookup_normalizer.py  test_password_hashers.py  test_password_validator.py  test_rfc6238service.py  test_role_manager.py  test_role_validator.py  test_serializer.py  test_token_provider.py  test_user_validator.py  test_utils.py
