[tool.poetry]
name = "pydentity-core"
version = "0.2.7"
description = ""
authors = ["Udachin Ivan <pypi.udachin@yandex.ru>"]
license = "MIT"
homepage = "https://github.com/udachin077/pydentity-core"
repository = "https://github.com/udachin077/pydentity-core.git"
exclude = ["tests", "example"]
packages = [{ include = "pydentity", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
email-validator = "^2.2.0"
itsdangerous = "^2.2.0"
cryptography = "^44.0.0"
pyotp = "^2.9.0"
pwdlib = { version = "^0.2.1", extras = ["argon2", "bcrypt"] }
py-machineid = { version = "^0.6.0", optional = true }
pydentity-core-sqlalchemy = { version = "^0.1.2", optional = true }
pydentity-core-tortoise = { version = "^0.1.1", optional = true }
uuid7 = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.extras]
sqlalchemy = ["pydentity-core-sqlalchemy"]
tortoise = ["pydentity-core-tortoise"]
machineid = ["py-machineid"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
